<resources>
    <string name="app_name">SideMenu</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="Dashboard">Dashboard</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan</string>
    <string name="search">Search</string>

</resources>