<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/Dashboard" android:title="@string/Dashboard" android:icon="@drawable/ic_realhome"></item>
<item android:id="@+id/Profile" android:title="@string/profile" android:icon="@drawable/ic_man_outline"></item>
<item android:id="@+id/History" android:title="@string/history" android:icon="@drawable/ic_history"></item>
<item android:id="@+id/Settings" android:title="@string/settings" android:icon="@drawable/ic_settings"></item>
    <item android:id="@+id/Search" android:title="Search" android:icon="@drawable/ic_find"></item>
    <item
        android:id="@+id/Logout"
        android:enabled="true"
        android:icon="@drawable/ic_signout"
        android:title="@string/logout"></item>


</menu>